# pytorch-api-template

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  config.yml  pyproject.toml  run.sh
app/: main.py
app/api/: __init__.py
app/api/endpoints/: predict.py
app/api/models/: __init__.py
app/api/utils/: evaluation.py  images.py
app/core/: base_config.yml  config.py  utils.py
app/exceptions/: common.py
